Fixed alignment in Main Page

--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,8 @@ align-items - align along the cross axis(used for all elements in that flexbox)
 .main_page{
   display:flex;
   flex-direction: row;
+  box-sizing: border-box;
+  
 }
 /* CAROUSEL */
 
@@ -115,25 +117,46 @@ input[type="radio"] {
   display: none; /* this makes the images appear as the user clicks on them*/
 }
 
-.container {
+.main_content {
   transform-style: preserve-3d;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  /* align-items: center; */
+
+  /* margin-top: 2%; */
+  /* margin-left: 15%; */
+  width: 60%;
+  height: 100%;
+  border: 1px solid red;
+  box-sizing: border-box;
+}
+
+.carousel {
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
 
-  margin-top: 2%;
-  margin-left: 15%;
-  width: 65%;
-  height: 100%;
+  /* margin-top: 2%; */
+  margin-left: 12%;
+  margin-bottom:2.5em;
+  width: 100%;
+  height: 40vh; /*!CHANGE THIS ACCORDING TO SCREEN SIZE*/
+  padding:1em;
+  /* border: 1px solid yellow; */
+  box-sizing: border-box;
 }
 
 .card {
   transition: transform 0.4s ease;
+  border: 1px solid yellow;
   cursor: pointer;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  align-self: center;
+  width: 75%;
+  /* height: 100%; */
 }
 
 .cards {
@@ -141,12 +164,12 @@ input[type="radio"] {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 1%;
+  /* padding: 1%; */
 }
 
 .cards img {
   max-height: 15rem;
-  width: 70%;
+  width: 100%;
 
   border-radius: 1em;
   object-fit: cover;
@@ -180,7 +203,7 @@ scaled to 0.8 times their original size */
 #item-2:checked ~ .cards #song-2,
 #item-3:checked ~ .cards #song-3 {
   transform: translatex(0) scale(1);
-  transform: translateY(-70%) scale(1);
+  transform: translateY(0) scale(1);
   opacity: 1;
   z-index: 1;
 }
@@ -190,8 +213,8 @@ img {
 
 /* My Queue */
 .queue{
-  
-  width:30%;
+  border: 1px solid red;
+  width:25%;
   height:fit-content;
   
   padding:1em;
@@ -237,12 +260,13 @@ img {
 
 .latest_releases{
   /* border: 1px red solid; */
-  width:60%;
+  
   height:40%;
-  position:absolute;
+  /* position:absolute;
   top:60%;
   z-index: 10;
-  margin-left:7.5%;
+  margin-left:7.5%; */
+  display:flex;
   color: white;
   padding:1.5%;
 }
@@ -250,4 +274,9 @@ img {
 .body_heading{
   font-weight: 500;
   font-size: 1.75em;
+}
+
+.left_aside{
+  width:15%;
+  border: 1px red solid;
 }
